--- a/css/style.css
+++ b/css/style.css
@@ -99,6 +99,10 @@ html, body {
     padding: 15px;
 }
 #listContent {
+    background: #fff;
+    position: relative;
+}
+#listContentBox {
     border-radius: 5px;
     background: #fff;
 }
@@ -172,6 +176,79 @@ html, body {
     "background": "rgba(0, 0, 0, 0.9)",
     "border": "1px solid rgba(0, 204, 204, .5)"
 }
+#filterBox {
+    width: 100%;
+    height: 150px;
+    position: relative;
+}
+#chart4 {
+    width: 100%;
+    height: 100px;
+}
+#rangeLeft,
+#rangeRight {
+    position: absolute;
+    border-radius:100%;
+    width:24px;
+    height:24px;
+    border: 1px solid #aaa;
+    background: #fff;
+    box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+    cursor: pointer;
+    top: 62px;
+}
+#rangeLeft {
+    left:8%;
+}
+#rangeRight {
+    left:90%;
+}
+#rangeProcess {
+    position: absolute;
+    top: 74px;
+    left:9%;
+    background:#ff5a5f;
+    height:4px;
+    // width:calc(100% - 100px);
+    width: 85%;
+}
+.cs-span-price {
+    position: absolute;
+    left:9%;
+    top: 100px;
+    font-size:16px;
+    color: #aaa;
+    display:block;
+    font-family: "华文细黑","STHeiti","微软雅黑","Microsoft YaHei",SimHei;
+}
+.cs-span-price-right {
+    left:82%;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
