--- a/css/style.css
+++ b/css/style.css
@@ -178,40 +178,15 @@ html, body {
 }
 #filterBox {
     width: 100%;
-    height: 150px;
+    height: 130px;
     position: relative;
 }
 #chart4 {
     width: 100%;
     height: 100px;
+    margin-top: 10px;
 }
-#rangeLeft,
-#rangeRight {
-    position: absolute;
-    border-radius:100%;
-    width:24px;
-    height:24px;
-    border: 1px solid #aaa;
-    background: #fff;
-    box-shadow: 0 2px 4px rgba(0,0,0,0.1);
-    cursor: pointer;
-    top: 62px;
-}
-#rangeLeft {
-    left:8%;
-}
-#rangeRight {
-    left:90%;
-}
-#rangeProcess {
-    position: absolute;
-    top: 74px;
-    left:9%;
-    background:#ff5a5f;
-    height:4px;
-    // width:calc(100% - 100px);
-    width: 85%;
-}
+
 .cs-span-price {
     position: absolute;
     left:9%;
@@ -225,9 +200,83 @@ html, body {
     left:82%;
 }
 
-
-
-
+.rangeBox {
+    position: absolute;
+    top: 75px;
+    left: 9%;
+    width: 82%;
+    text-align: center;
+}
+hr {
+    height:1px;
+    border:none;
+    border-top:1px solid #ddd;
+    width: 92%;
+    margin-left: 4%;
+}
+.cs-kfs-box {
+    height: auto;
+    width: 100%;
+    padding-top: 10px;
+}
+.cs-more-filter {
+    float: left;
+    width: 100%;
+    height: 30px;
+    text-align: left;
+    padding-left: 10%;
+    margin-top: 8px;
+    margin-bottom: 5px;
+}
+.filter-h3 {
+    font-weight: 500;
+    font-size: 18px;
+    margin-bottom: 5px;
+}
+.more-filter-range-box {
+    display: inline-block;
+}
+.cs-more-filter label {
+    display: inline-block;
+    width:25%;
+}
+#id-input-kfs {
+    width: 100%;
+}
+#id-input-kfs option {
+    text-align: center;
+}
+.cs-ui-select {
+    text-align: center;
+    position: relative;
+    display: inline-block;
+    width: 60%;
+}
+.cs-ui-select select{
+    position:absolute;
+    left: 0px;
+    top: 0px;
+    width: 100%;
+    height: 3em;
+    opacity: 0;
+}
+.cs-ui-select span {
+    display:block;
+    width:100%;
+    border:1px solid #428bca;
+    border-radius: 5px;
+}
+.cs-ui-select span::after {
+    width: 0px;
+    height:0px;
+    content:'';
+    top: 6px;
+    right: 6px;
+    position: absolute;
+    border-width: 13px;
+    border-style: solid;
+    border-color: #007998 transparent transparent transparent;
+}
 
 
 
